tests/compilefail22.out
[1mtests/compilefail22.pas:6:5: [0m[1m[91merror:[0m Identifier undefined 'd'
     6 | 	d := c + b;